# AOC2021

./: .gitignore  Makefile  README.md  pyproject.toml
aoc2021/: day_01.py  day_02.py  day_03.py  day_07.py  day_09.py  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_2.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py
puzzles/: day_1.md  day_6.md
