[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = ""
authors = ["Chris Geekie <chris.geekie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.910"
flake8 = "^4.0.1"
more-itertools = "^8.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
